2008-12-05  Pamela Greene  <pam@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=22601
        Add test to verify that calling functions on a Java applet from JS works.

        * fast/dom/java-applet-calls-expected.txt: Added.
        * fast/dom/java-applet-calls.html: Added.
        * fast/dom/resources/TestApplet.class: Added.
        * fast/dom/resources/TestApplet.java: Added.
        (TestApplet): Source of test applet for use by layout test(s).
        (TestApplet.init):
        (TestApplet.setString):
        (TestApplet.getString):

2008-12-05  Pamela Greene  <pam@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=22592
        Make sure the onload handler is only called once, even when there are
        multiple <body> nodes in the document.

        * fast/events/onload-fires-twice-expected.txt: Added.
        * fast/events/onload-fires-twice.html: Added.

2008-12-05  Pamela Greene  <pam@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=22575
        Add a test for accessing NodeList items by name.

        * fast/dom/NodeList/nodelist-item-with-name-expected.txt: Added.
        * fast/dom/NodeList/nodelist-item-with-name.html: Added.

2008-12-05  Pamela Greene  <pam@chromium.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=22632
        Add a test for DOM operations with incompatible receivers or arguments.

        * fast/dom/incompatible-operations-expected.txt: Added.
        * fast/dom/incompatible-operations.html: Added.

2008-12-05  Justin Garcia  <justin.garcia@apple.com>

        Updating these test results.  On Tiger the fragment created from RTFD data 
        contained interchange newlines that we incorrectly handled before r38983.

        * platform/mac-tiger/editing/pasteboard/paste-RTFD-expected.checksum: