@@ -1,0 +1,2 @@
+This tests that an onload handler named 'onload' is called properly. You should see "PASS" below.
+PASS: onload function gets called.
