@@ -2,6 +2,16 @@
 
         Reviewed by Darin Adler.
 
+        https://bugs.webkit.org/show_bug.cgi?id=22604
+        Add test for onload handler named 'onload'.
+
+        * fast/events/onload-name-collision-expected.txt: Added.
+        * fast/events/onload-name-collision.html: Added.
+
+2008-12-05  Pamela Greene  <pam@chromium.org>
+
+        Reviewed by Darin Adler.
+
         https://bugs.webkit.org/show_bug.cgi?id=22601
         Add test to verify that calling functions on a Java applet from JS works.
 
